using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class Constants 
{

    //Animations Section

    public static string IdleAnimTrig = "Idle";
    public static string JumpAnimTrig = "Jump";
    public static string MoveAnimTrig = "Run";
    public static string AttackAnimTrig = "Attack";
    public static string EnemyTag = "Enemy";
    public static string PlayerAttackTag = "PlayerAttack";
    public static string PlayerTag = "Player";
    public static string EnemyAttackTag = "EnemyAttack";


    //Pickables
    public static string CoinTag = "Coin";
    public static string GemTag = "Gem";





}
